fastmetrics-derive/tests/ui/fail/label_set_schema/non_struct.rs
use fastmetrics_derive::LabelSetSchema;

// This should fail because LabelSetSchema can only be derived for structs with named fields.
#[derive(LabelSetSchema)]
enum NotAStruct {
    Variant,
}

fn main() {}
